# spider

./: .gitignore  CMakeLists.txt  execute_me  install.sh
boost/: CMakeLists.txt
include/bdd_connect/: HandleFileServer.hh  SharedData.hh  SqlManager.hh  SqlServer.hh
include/client/: ClientSpider.hpp  WindowsInputHandler.hpp
include/keyRegister/: keyRegister.hpp
include/socket/: #serverTcpSocket.hpp#  clientTcpSocket.hpp  serverTcpSocket.hpp
include/spider/: #packetUnserializer.hpp#  .#handleCmdToClient.hh  handleCmdToClient.hh  packetSerializer.hpp  packetUnserializer.hpp  protocol.hpp  spider.h
include/spiderServer/: spiderServer.hpp
include/utils/: stringManager.hh
saveClient/: 2.csv  4.csv  666.csv
source/: .#utils
source/Network/: CMakeLists.txt
source/bdd_connect/: CMakeLists.txt  HandleFileServer.cpp  SqlManager.cpp  SqlServer.cpp
source/client/: ClientSpider.cpp  WindowsInputHandler.cpp  main.cpp  spider_client.sln  spider_client.vcxproj  spider_client.vcxproj.filters
source/keyRegister/: CMakeLists.txt  keyRegister.cpp
source/socket/: #serverTcpSocket.cpp#  .#serverTcpSocket.cpp  CMakeLists.txt  clientTcpSocket.cpp  serverTcpSocket.cpp
source/spider/: CMakeLists.txt  handleCmdToClient.cpp  main.cpp
source/spiderServer/: spiderServer.cpp
source/utils/: CMakeLists.txt  stringManager.cpp
spider/: CMakeLists.txt
spider/src/: main.cpp
ssl_socket/: SocketErrors.hpp  Sockets.hpp  server.pem  spider.crt  spider.key
ssl_socket/client/: Makefile  SSLClient.cpp  SSLClient.hpp  client  mainClient.cpp
ssl_socket/server/: Makefile  (+4 more)
(+17 files in other folders)
